# daoyoucode

./: .cursorrules  .daoyou.chat.history.md  .daoyou.conf.yml  .gitignore  AGENT_COMPARISON_ANALYSIS.md  AGENT_IMPROVEMENT_PLAN.md  AGENT_OPTIMIZATION_TASK_PLAN.md  AGENT_SYSTEM_PROGRESS.md  ARCHITECTURE.md  Agent拆分任务分析.md  CLI_AGENT_INTEGRATION_COMPLETE.md  CLI_COMPLETED.md  CLI_ENHANCED.md  CLI_TO_LLM_FLOW_CHECK.md  CONTRIBUTING.md  Context改进验证报告.md  Context路径保持改进.md  Context集成代码修改.md  Context集成完成总结.md  Context集成实施计划.md  Context集成当前进度.md  Context集成最终建议.md  Context集成最终确认.md  Context集成调用链验证.md  DEPENDENCIES_REPORT.md  GITIGNORE_RULES.md  LAYERED_STORAGE_IMPLEMENTATION.md  LICENSE  NEXT_STEPS.md  PHASE_0_COMPLETE.md  PROJECT_IMPLEMENTATION.md  PROJECT_SHOWCASE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.en.md  README.md  REMAINING_FEATURES_TASK_PLAN.md  TOOLS_REFERENCE.md  daoyoucode_vs_claude_analysis.md  hello_world.py  (+29 more)
backend/: .env.example  01_CLI命令参考.md  02_ORCHESTRATORS编排器介绍.md  03_AGENTS智能体介绍.md  04_TOOLS工具参考.md  05_LSP和AST技术说明.md  06_结构化理解传递给大模型.md  3_STAGE_UNDERSTANDING_SUMMARY.md  ADVANCED_FEATURES_COMPLETE.md  AGENTS_ANALYSIS.md  AGENT_ARCHITECTURE.md  AGENT_ARCHITECTURE_DEEP_DIVE.md  AGENT_COMPARISON_AND_RECOMMENDATIONS.md  AGENT_FLOW_ANALYSIS.md  AGENT_OPTIMIZATION_PLAN.md  AGENT_README.md  AGENT_TOOL_MAPPING.md  AGENT_WORKFLOW.md  AI_MODIFICATION_FINAL_STATUS.md  AI_MODIFICATION_REVIEW.md  AI_NOT_CALLING_TOOLS_DIAGNOSIS.md  AI_TOOL_CALLING_FIX_SUMMARY.md  ALL_OPTIMIZATIONS_COMPLETE.md  API_KEY轮询配置说明.md  API_SETUP.md  API模式验证完成总结.md  ARCHITECTURE_DEEP_ANALYSIS.md  ARCHITECTURE_FIXED.md  ARCHITECTURE_HIGHLIGHTS.md  ARCHITECTURE_SUMMARY.md  AST_TOOLS_COMPLETE.md  AUTO_SCALE_TOKENS_SUMMARY.md  Agent正在工作.md  BM25测试修复说明.md  BM25问题解决.md  BUG_FIXES_SESSION_2.md  CALL_CHAIN_01_ENTRY.md  CALL_CHAIN_02_COMMAND.md  CALL_CHAIN_03_SKILL.md  CALL_CHAIN_04_AGENT.md  (+314 more)
backend/cli/: AGENT_INTEGRATION.md  AGENT_INTEGRATION_STATUS.md  INTEGRATION_PLAN.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  __init__.py  __main__.py  app.py  requirements.txt  test_cli.py
backend/config/: API_CONFIG_GUIDE.md  agent_router_config.yaml  embedding_config.yaml  llm_config.yaml  memory_load_strategies.example.yaml
backend/daoyoucode/: __init__.py
backend/tests/: TEST_REPORT.md  test_3_stage_understanding.py  test_agent_edit_simple.py  test_agent_streaming_edit.py  test_all_orchestrators_quick.py  test_api_mode_verification.py  test_app_step.py  test_ast_tools.py  test_auto_scale_tokens.py  test_bm25_only.py  test_cache_layer.py  test_chat_assistant_debug.py  test_chat_direct.py  test_chat_history.py  test_chat_issue.py  test_cli_chat.py  test_cli_direct.py  test_cli_help.py  test_cli_interaction.py  test_cli_output.py  test_cli_skills.py  test_cli_streaming_output2.py  test_codebase_index_integration.py  test_context_manager.py  test_conversation_tree.py  test_core_orchestrator.py  test_diff_edit_target.py  test_diff_tools.py  test_embedding.py  test_event_loop_issue.py  test_final_demo.py  test_fixes.py  (+65 more)
(+269 files in other folders)
